pxc/tests/test_25_slice/const5.px

namespace const5;
import test_common "";

function void test1()
{
  vector{int} a;
  a.resize(100, int());
  int i;
  for (i = 0; i < 100; ++i) { a[i] = i * 2; }
  cslice{int} asli = a[30..100]; // ok
  println(asli[0]);
  asli[50] = 3; // error
}

test1();
